--- a/BCandSC_CSharp/BCandSC_CSharp.csproj
+++ b/BCandSC_CSharp/BCandSC_CSharp.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Nethereum.ABI" Version="4.12.0" />
+    <PackageReference Include="Nethereum.Accounts" Version="4.12.0" />
+    <PackageReference Include="Nethereum.Autogen.ContractApi" Version="4.11.0" />
+    <PackageReference Include="Nethereum.Hex" Version="4.12.0" />
+    <PackageReference Include="Nethereum.RLP" Version="4.12.0" />
+    <PackageReference Include="Nethereum.RPC" Version="4.12.0" />
+    <PackageReference Include="Nethereum.Signer" Version="4.12.0" />
+    <PackageReference Include="Nethereum.Util" Version="4.12.0" />
+    <PackageReference Include="Nethereum.Web3" Version="4.12.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
@@ -14,6 +23,10 @@
   <ItemGroup>
     <Folder Include="JS\" />
     <Folder Include="Style\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SimpleStorage\SimpleStorage.csproj" />
   </ItemGroup>
 
 </Project>
