--- a/BCandSC_CSharp/BCandSC_CSharp.csproj
+++ b/BCandSC_CSharp/BCandSC_CSharp.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Nethereum.Web3" Version="4.12.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+    <PackageReference Include="System.Net.Http.Formatting.Extension" Version="5.2.3" />
   </ItemGroup>
 
   <ItemGroup>
