--- a/SimpleStorage/SimpleStorage.csproj
+++ b/SimpleStorage/SimpleStorage.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Nethereum.Autogen.ContractApi" Version="4.11.0" />
     <PackageReference Include="Nethereum.Web3" Version="4.12.0" />
+    <PackageReference Include="System.Net.Http.Formatting.Extension" Version="5.2.3" />
   </ItemGroup>
 
 </Project>
