--- a/BCandSC_CSharp/BCandSC_CSharp.csproj
+++ b/BCandSC_CSharp/BCandSC_CSharp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IronPython" Version="3.4.0" />
     <PackageReference Include="Nethereum.ABI" Version="4.12.0" />
     <PackageReference Include="Nethereum.Accounts" Version="4.12.0" />
     <PackageReference Include="Nethereum.Autogen.ContractApi" Version="4.11.0" />
