--- a/BCandSC_CSharp/BCandSC_CSharp.csproj
+++ b/BCandSC_CSharp/BCandSC_CSharp.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="IronPython" Version="3.4.0" />
+    <PackageReference Include="IronPython.StdLib" Version="3.4.0" />
     <PackageReference Include="Nethereum.ABI" Version="4.12.0" />
     <PackageReference Include="Nethereum.Accounts" Version="4.12.0" />
     <PackageReference Include="Nethereum.Autogen.ContractApi" Version="4.11.0" />
@@ -25,10 +26,6 @@
   <ItemGroup>
     <Folder Include="JS\" />
     <Folder Include="Style\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\SimpleStorage\SimpleStorage.csproj" />
   </ItemGroup>
 
 </Project>
