--- a/BCandSC_CSharp/BCandSC_CSharp.csproj
+++ b/BCandSC_CSharp/BCandSC_CSharp.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Nethereum.ABI" Version="4.12.0" />
     <PackageReference Include="Nethereum.Accounts" Version="4.12.0" />
+    <PackageReference Include="Nethereum.Autogen.ContractApi" Version="4.11.0" />
     <PackageReference Include="Nethereum.Hex" Version="4.12.0" />
     <PackageReference Include="Nethereum.RLP" Version="4.12.0" />
     <PackageReference Include="Nethereum.RPC" Version="4.12.0" />
@@ -26,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SimpleStorage\Betting.csproj" />
+    <ProjectReference Include="..\SimpleStorage\BettingContract.csproj" />
   </ItemGroup>
 
 </Project>
